[package]
name = "relay"
version = "1.4.4"
authors = ["Antony Targett <atargett@au1.ibm.com>", "Nick Waywood <nwaywood@au1.ibm.com>", "Sandeep Nishad <sandeep.nishad1@ibm.com"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
[[bin]]
name = "client-tls"
path = "src/client_tls.rs"

[[bin]]
name = "dummy-driver"
path = "driver/driver.rs"



[dependencies]
tonic = {version="0.2",  features = ["tls"]}
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "fs"] }
sled = "0.31.0"
uuid = { version = "0.8", features = ["v4"] }
bincode = "1.2.1"
serde = {version="1.0.110", features = ["derive"]}
config = "0.10.1"
listenfd = "0.3"
futures = { version = "0.3.5" }
base64 = "0.13.0"
reqwest = { version = "0.10.10", features = ["json"] }
serde_json = "1.0.1"


[build-dependencies]
tonic-build = "0.2"




