[package]
name = "build-protos-rs"
# Don't update this version, update the one in "pkg/Cargo.toml".
version = "2.2.0"
authors = ["Peter Somogyvari  <peter.somogyvari@accenture.com>", "Sandeep Nishad <sandeep.nishad1@ibm.com"]
edition = "2021"

[lib]
name = "weaverpb"
path = "pkg/src/lib.rs"

[dependencies]
tonic = {version="0.12.3",  features = ["tls"]}
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["macros", "fs"] }
serde = {version="1.0.193", features = ["derive"]}

[build-dependencies]
tonic-build = "0.12.3"