[package]
name = "relay"
version = "2.1.0"
authors = ["Antony Targett <atargett@au1.ibm.com>", "Nick Waywood <nwaywood@au1.ibm.com>", "Sandeep Nishad <sandeep.nishad1@ibm.com"]
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "satp_client"
path = "src/sample_satp_client.rs"

[[bin]]
name = "client-tls"
path = "src/client_tls.rs"

[[bin]]
name = "dummy-driver"
path = "driver/driver.rs"

[dependencies]
tonic = { version="0.10.2",  features = ["tls"] }
tokio = { version = "1.34.0", features = ["macros", "fs", "rt", "rt-multi-thread", "sync"] }
sled = "0.34.7"
uuid = { version = "1.3.0", features = ["v4"] }
bincode = "1.3.3"
serde = {version="1.0.193", features = ["derive"]}
config = "0.11.0"
listenfd = "1.0.1"
futures = { version = "0.3.27" }
base64 = "0.20.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.108"
# cacti_weaver_protos_rs = { path = "./protos-rs" }
cacti_weaver_protos_rs = "2.1.0"
colored = {version="2.0.4"}
rusqlite = "0.29.0"
chrono = "0.4"
dotenv = "0.15"
log = "0.4.20"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
lazy_static = "1.4"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.10.2"
