[package]
name = "cacti_weaver_protos_rs"
version = "2.1.0"
authors = ["Peter Somogyvari  <peter.somogyvari@accenture.com>", "Sandeep Nishad <sandeep.nishad1@ibm.com"]
edition = "2021"
license = "Apache-2.0"
description = "Rust compiled Weaver protobuf package"
documentation = "https://github.com/hyperledger-cacti/cacti/tree/main/weaver/rfcs/formats"
repository = "https://github.com/hyperledger-cacti/cacti/"
readme = "README.md"
keywords = ["cacti", "weaver", "interoperability", "protobuf", "protos"]

[lib]
name = "weaverpb"
path = "src/lib.rs"

[dependencies]
tonic = {version="0.10.2",  features = ["tls"]}
prost = "0.12.3"
serde = {version="1.0.193", features = ["derive"]}